# performanceAnalytics

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  calculator.py  docker-compose.ci-local.yml  docker-compose.yml  input.json  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  sampleInputEodFlip.json  sampleInputLongFlip.json  sampleInputShort.json  sampleInputShortGrowth.json  sampleInputStandardGrowth.json  sampleInputZeroValueTest.json  sampleInputlong.json  samplepayload.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
adapters/: api_adapter.py
app/: enterprise_readiness.py  observability.py  openapi_enrichment.py  precision_policy.py
app/core/: config.py  constants.py  exceptions.py  handlers.py
app/models/: attribution_requests.py  attribution_responses.py  contribution_requests.py  contribution_responses.py  mwr_requests.py  mwr_responses.py  pas_connected_requests.py  pas_connected_responses.py  positions_analytics_requests.py  positions_analytics_responses.py  requests.py  responses.py  returns_series.py  workbench_analytics_requests.py  workbench_analytics_responses.py
app/services/: calculator.py  http_resilience.py  lineage_service.py  pas_input_service.py  pas_snapshot_service.py
common/: enums.py
core/: annualize.py  envelope.py  errors.py  periods.py  repro.py
docs/: API Examples & Recipes.md  Glossary of Terms.md  Portfolio Performance Analytics - A User Guide.md  Quick Start Guide.md  RFC.MD
docs/RFCs/: RFC 001 - Performance Engine V2 - Vectorization & Architectural Refactor.MD  RFC 002 - Engine Upgrade - Performance Breakdown API.md  RFC 002 - V3 Engine Upgrade - TWR & MWR API Alignment.md  RFC 003 - Position Contribution Engine.md  RFC 004 - Contribution Engine Hardening & Finalization.md  RFC 005 - Portfolio Correlation Matrix API.md  RFC 006 - Multi‑Level Performance Attribution API.md  RFC 007 - Asset Allocation Drift Monitoring API.md  RFC 008 - Fixed‑Income Metrics API.md  RFC 009 - Exposure Breakdown API.md  RFC 009 — Exposure Breakdown API.md  RFC 010 - Equity Factor Exposures API.md  RFC 010 — Equity Factor Exposures API.md  RFC 011 - Scenario Analysis API.md  RFC 012 - Risk-Adjusted Returns API.md  RFC 013 - Active Analytics API.md  RFC 014 - Cross-Cutting Consistency & Diagnostics Framework.md  RFC 015 - TWR Enhancements.md  (+30 more)
engine/: attribution.py  breakdown.py  compute.py  config.py  contribution.py  exceptions.py  mwr.py  periods.py  policies.py  ror.py  rules.py  schema.py
rfcs/: README.md  RFC-0001-pa-coverage-hardening-wave-1.md  RFC-0002-pa-coverage-hardening-wave-2.md  RFC-0003-pa-e2e-workflow-coverage-wave-1.md
scripts/: api_vocabulary_inventory.py  check_monetary_float_usage.py  dependency_health_check.py  migration_contract_check.py  no_alias_contract_guard.py  openapi_quality_gate.py
tests/: conftest.py
(+137 files in other folders)
