[tool.poetry]
name = "performanceAnalytics"
version = "0.1.0"
description = "API for calculating portfolio performance metrics."
authors = ["sandeepgajbi@gmail.com"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "app" },
    { include = "engine" },
    { include = "adapters" },
    { include = "core" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
fastapi = ">=0.100.0"
uvicorn = ">=0.20.0"
pandas = ">=1.0.0"
pydantic = ">=2.0.0"
pydantic-settings = "^2.10.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest = "^8.4.1"
python-dotenv = "^1.1.1"
pre-commit = "^4.2.0"
pytest-cov = "^6.2.1"
pytest-benchmark = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]