[tool.poetry]
name = "performanceAnalytics"
version = "0.1.0"
description = "API for calculating portfolio performance metrics."
authors = ["sandeepgajbi@gmail.com"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "app" },
    { include = "engine" },
    { include = "adapters" },
    { include = "core" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.100.0"
uvicorn = ">=0.20.0"
pandas = ">=1.0.0"
pydantic = ">=2.0.0"
pydantic-settings = "^2.10.1"
scipy = "^1.11.0"
orjson = "^3.10.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
python-dotenv = "^1.1.1"
pre-commit = "^4.2.0"
pytest-cov = "^6.2.1"
pytest-benchmark = "^4.0.0"
pytest-mock = "^3.14.1"
pytest-asyncio = "^0.23.0"
ruff = "^0.6.9"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["asyncio"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
